[gd_scene load_steps=7 format=3 uid="uid://clfkbadbhyh3a"]

[ext_resource type="Script" path="res://player/attacks/javelin.gd" id="1_c4rxk"]
[ext_resource type="Texture2D" uid="uid://bjgeiykf4qri" path="res://textures/items/weapons/javelin_3_new.png" id="2_petwj"]
[ext_resource type="Texture2D" uid="uid://bh570b7f60d8i" path="res://textures/items/weapons/javelin_3_new_attack.png" id="3_wv5mm"]
[ext_resource type="AudioStream" uid="uid://b168egulxd7je" path="res://audio/sfx/woosh.wav" id="4_07eik"]
[ext_resource type="PackedScene" uid="uid://bo6us8533c0ra" path="res://utils/hit_box.tscn" id="4_eqisr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rx00l"]
radius = 3.53553
height = 33.9411

[node name="Javelin" type="Node2D"]
top_level = true
scale = Vector2(0.1, 0.1)
script = ExtResource("1_c4rxk")

[node name="SpriteNew" type="Sprite2D" parent="."]
texture = ExtResource("2_petwj")

[node name="SpriteAttack" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_wv5mm")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ChangeDirectionTimer" type="Timer" parent="."]

[node name="ResetPostimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_07eik")
volume_db = -10.0

[node name="HitBox" parent="." instance=ExtResource("4_eqisr")]
collision_layer = 4
collision_mask = 4
damage = 10.0

[node name="CollisionShape2D" parent="HitBox" index="0"]
rotation = -0.785398
shape = SubResource("CapsuleShape2D_rx00l")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="timeout" from="ResetPostimer" to="." method="_on_reset_postimer_timeout"]
[connection signal="hit" from="HitBox" to="." method="_on_hit_box_hit"]

[editable path="HitBox"]
